--- a/styles/index.css
+++ b/styles/index.css
@@ -8,15 +8,13 @@
   margin: auto;
 }
 
-.scroll-image {
-  position: relative;
-}
 
 .scroll-png {
   position: absolute;
-  top: 90px;
-  width: 420px;
+  bottom: -50%;
+  transform: translateY(-65%);
 }
+
 #services-down {
   font-size: 14px;
   padding-left: 6px;
@@ -32,21 +30,16 @@
 .navigation-links-items-container {
   display: flex;
   justify-content: center;
-  padding: 66px;
+  padding: 66px 0 66px 0;
 }
 
 .change-page-buttons{
-  width: 100%;
-  height: 282px;
+  max-width: 100%;
   margin-top: 150px;
   display: flex;
-  justify-content: center;
-  position: relative;
 }
 
 .three-change-page{
-  position: absolute;
-  top: 50px;
   margin : auto;
   cursor: pointer;
 }
@@ -71,6 +64,7 @@
 .homepage-description-container {
   display: flex;
   justify-content: center;
+  position: relative;
 }
 
 .vektor-text-effect {
@@ -80,19 +74,18 @@
 
 .blur-screen-links-item {
   display: flex;
-  gap: 60px;
   border-radius: 8px;
   background: rgba(243, 243, 243, 0.6);
   backdrop-filter: blur(8px);
   padding: 20px 40px;
   font-family: "Poppins", sans-serif;
-  max-width: 770px;
+  max-width: 940px;
 }
 
 .blur-links-item {
   display: flex;
   align-items: center;
-  gap: 50px;
+  gap: 10px;
   color: #fff;
   font-family: "Poppins" , sans-serif;
   font-size: 14px;
@@ -118,6 +111,40 @@
   position: relative;
 }
 
+.list{
+  color: #fff;
+}
+
+.list-input{
+  padding: 15px;
+  border: none;
+  font-size: 16px;
+  font-family: "DM Sans" , sans-serif;
+  color: #fff;
+  border-radius: 10px;
+  background-color: transparent;
+  align-items: center;
+}
+
+::placeholder{
+  color: #fff;
+}
+
+.list-input{
+  width: 220px;
+}
+
+.list-input:focus {
+  outline: none;
+}
+
+.travel-type-item{
+ background-color: rgba(243, 243, 243, 0.6);
+  color: #000;
+  font-size: 16px;
+  font-family: "Poppins" , sans-serif;
+}
+
 .homepage-link-items .homepage-item:hover {
   border-bottom: 2px solid #df6951;
   padding-bottom: 5px;
@@ -127,13 +154,6 @@
   color: rgb(223, 105, 80);
 }
 
-.services-item-travel:hover {
-  color: rgb(223, 105, 80);
-}
-
-.services-item-duration:hover {
-  color: rgb(223, 105, 80);
-}
 
 .services-link-list:hover .services-links-items {
   visibility: visible;
@@ -152,48 +172,6 @@
   font-family: "Poppins", sans-serif;
   color: #000;
   font-size: 14px;
-}
-
-.services-links-items-travel {
-  position: absolute;
-  top: 60px;
-  visibility: hidden;
-  line-height: 36px;
-  z-index: 1;
-  background-color: rgba(255, 255, 255, 0.8);
-  padding: 18px;
-  border-radius: 20px;
-  transition: all 0.3s ease;
-  font-family: "Poppins", sans-serif;
-  color: #000;
-  font-size: 14px;
-}
-
-.services-links-items-duration {
-  position: absolute;
-  top: 60px;
-  visibility: hidden;
-  line-height: 36px;
-  z-index: 1;
-  background-color: rgba(255, 255, 255, 0.8);
-  padding: 20px 60px 20px 60px;
-  border-radius: 20px;
-  transition: all 0.3s ease;
-  font-family: "Poppins", sans-serif;
-  color: #000;
-  font-size: 14px;
-}
-
-.duration-link-list {
-  margin-left: -50px;
-}
-
-.duration-link-list:hover .services-links-items-duration {
-  visibility: visible;
-}
-
-.travel-link-list:hover .services-links-items-travel {
-  visibility: visible;
 }
 
 .homepage-touch-btn {
@@ -235,7 +213,7 @@
   transform: translateX(-60px);
   cursor: pointer;
 }
-/* User Avatar Start */
+
 .user-avatar-john {
   cursor: pointer;
 }
@@ -268,7 +246,6 @@
 .user-profile-paragraph {
   margin-left: -40px;
 }
-/* User Avatar Finish */
 
 /* General Settings Start */
 
