--- a/styles/shared.css
+++ b/styles/shared.css
@@ -57,9 +57,10 @@ a {
 
 .company-and-destinitions-links {
   display: flex;
-  width: 100%;
+  max-width: 1350px;
   align-items: center;
   font-family: "Manrope" , sans-serif;
+  margin: 0 auto;
 }
 
 
@@ -93,7 +94,7 @@ a {
 
 .travel-footer-logo-description{
   position: relative;
-  max-width: 1350px;
+  max-width: 1610px;
   margin: auto;
   padding-bottom: 80px;
 }
@@ -140,12 +141,14 @@ padding-top: 20px;
   margin-top: 50px;
   color: #E5E5EA;
   opacity: 0.4;
+  max-width: 1350px;
+  margin: auto;
 }
 
 
 .footer-background-img{
   z-index: -1;
   position: absolute;
-  right: -80px;
+  right: 0;
   bottom: 0;
 }
