--- a/styles/index.css
+++ b/styles/index.css
@@ -8,7 +8,7 @@
 }
 
 /* Best-Services styles*/
-.best-services{
+.best-services {
   margin: 100px 20px;
 }
 .Homepage-best-services-1 {
@@ -54,7 +54,7 @@
 }
 .Homepage-best-human-img {
   position: relative;
- text-align: center;
+  text-align: center;
 }
 .Homepage-best-services-plane-img {
   position: relative;
@@ -63,11 +63,11 @@
 }
 .Homepage-best-services-hands-img {
   position: relative;
- text-align: center;
+  text-align: center;
 }
 .Homepage-best-services-medical-img {
   position: relative;
- text-align: center;
+  text-align: center;
 }
 .Hompage-box-1 {
   width: 50px;
@@ -88,7 +88,7 @@
   display: inline-block;
   position: absolute;
   z-index: -1;
- left: 47px;
+  left: 47px;
   bottom: 25px;
 }
 .Hompage-box-3 {
@@ -263,33 +263,32 @@
   text-align: center;
 }
 
-.left-text-line-effect{
+.left-text-line-effect {
   position: absolute;
   right: -90px;
   bottom: -5px;
 }
 
-.right-text-line-effect{
+.right-text-line-effect {
   position: absolute;
   right: -90px;
   bottom: -5px;
 }
 
-.explore-big-text{
-  color: #FFF;
-  font-family: "Volkhov" , sans-serif;
+.explore-big-text {
+  color: #fff;
+  font-family: "Volkhov", sans-serif;
   font-size: 50px;
   line-height: 72px;
 }
 
-.promotion-text{
- color: #FFEFEC;
- font-family: "Poppins" , sans-serif;
- font-size: 18px;
- letter-spacing: 2px;
- text-transform: uppercase;
+.promotion-text {
+  color: #ffefec;
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
 }
-
 
 .view-packages-btn {
   background-color: transparent;
@@ -298,10 +297,9 @@
   border-radius: 10px;
   color: #fff;
   cursor: pointer;
-  font-family: "Poppins" , sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 14px;
 }
-
 
 .explore-left-screen {
   background-image: url(/images/homepage-explore1.png);
@@ -317,15 +315,15 @@
   background-position: center;
 }
 
-.text-description-cities{
+.text-description-cities {
   position: relative;
 }
 
-.text-description-nature{
+.text-description-nature {
   position: relative;
 }
 
-.nature-btn{
+.nature-btn {
   background-color: transparent;
   border: 1px solid #fff;
   border-radius: 10px;
@@ -338,11 +336,11 @@
   transition: all 0.4s ease;
 }
 
-.nature-btn:hover{
+.nature-btn:hover {
   border-radius: 30px;
 }
 
-*{
+* {
   margin: 0;
   padding: 0;
   text-decoration: none;
@@ -352,35 +350,35 @@
 
 /* Trending Your Packages - Start */
 
-.trending-your-packages-container{
+.trending-your-packages-container {
   align-items: center;
   display: flex;
   justify-content: center;
   padding: 50px 20px;
 }
 
-.trending-your-packages-project-start{
+.trending-your-packages-project-start {
   text-align: center;
   padding-top: 20px;
 }
 
-.out-trending-packages-text{
-color: #181E4B;
-font-family: Volkhov, sans-serif;
-font-size: 50px;
+.out-trending-packages-text {
+  color: #181e4b;
+  font-family: Volkhov, sans-serif;
+  font-size: 50px;
 }
 
-.trendy-text{
-color: #DF6951;
-font-family: Poppins,sans-serif;
-font-size: 18px;
+.trendy-text {
+  color: #df6951;
+  font-family: Poppins, sans-serif;
+  font-size: 18px;
 }
 
-.switzerland-image{
+.switzerland-image {
   position: relative;
 }
 
-.trending-your-packages-items{
+.trending-your-packages-items {
   display: flex;
   flex-wrap: wrap;
   gap: 60px;
@@ -388,65 +386,65 @@ font-size: 18px;
   padding-top: 30px;
 }
 
-.photo-switzerland{
+.photo-switzerland {
   cursor: pointer;
   width: 100%;
 }
 
-.photo-brazil{
+.photo-brazil {
   cursor: pointer;
   width: 100%;
 }
 
-.photo-eygpt{
+.photo-eygpt {
   cursor: pointer;
   width: 100%;
 }
 
-.img-swiss{
+.img-swiss {
   position: absolute;
   left: 10px;
   bottom: -70px;
   border-radius: 10px;
 }
 
-.brazil-image{
+.brazil-image {
   position: relative;
 }
 
-.eygpt-image{
+.eygpt-image {
   position: relative;
 }
 
-.img-brazil{
+.img-brazil {
   position: absolute;
   left: 10px;
   bottom: -70px;
 }
 
-.img-egypt{
+.img-egypt {
   position: absolute;
   left: 10px;
   bottom: -70px;
   border-radius: 10px;
 }
 
-.country-info-all{
+.country-info-all {
   display: flex;
   padding-top: 45px;
-  color: #7D7D7D;
+  color: #7d7d7d;
   font-family: Poppins, sans-serif;
   gap: 10px;
   align-items: center;
 }
 
-.profile-icon{
-width: 20px;
-height: 20px;
+.profile-icon {
+  width: 20px;
+  height: 20px;
 }
 
-.country-name-text-all{
-  font-family: Poppins,sans-serif;
+.country-name-text-all {
+  font-family: Poppins, sans-serif;
   font-size: 30px;
   display: flex;
   padding-top: 5px;
@@ -454,60 +452,60 @@ height: 20px;
   text-align: start;
 }
 
-.country-name-all{
+.country-name-all {
   display: flex;
   align-items: center;
   gap: 3px;
   justify-content: space-between;
 }
 
-.star-icons{
+.star-icons {
   display: flex;
   gap: 5px;
 }
 
-.navigation-country-all{
+.navigation-country-all {
   display: flex;
   gap: 5px;
   align-items: center;
 }
 
-.location-country-text-all{
- color: #7D7D7D;
- font-family: Poppins, sans-serif;
+.location-country-text-all {
+  color: #7d7d7d;
+  font-family: Poppins, sans-serif;
 }
 
-.price-text-all{
+.price-text-all {
   display: flex;
   align-items: center;
   gap: 20px;
   padding-bottom: 15px;
 }
 
-.onemilion{
-  color: #DF6951;
+.onemilion {
+  color: #df6951;
   font-size: 30px;
   font-family: Poppins, sans-serif;
 }
 
-.onemiliontwo{
-  color: #7D7D7D;
+.onemiliontwo {
+  color: #7d7d7d;
   font-family: Poppins, sans-serif;
   font-size: 20px;
   text-decoration: line-through;
 }
 
-.country-description-text-all{
-text-align: start;
+.country-description-text-all {
+  text-align: start;
 }
 
-.description-text-all{
-  font-family: Poppins,sans-serif;
+.description-text-all {
+  font-family: Poppins, sans-serif;
   padding-bottom: 10px;
 }
 
-.explore-now-btn{
-  background-color: #DF6951;
+.explore-now-btn {
+  background-color: #df6951;
   padding: 15px;
   color: #fff;
   font-family: Poppins, sans-serif;
@@ -517,8 +515,101 @@ text-align: start;
   transition: all 0.3s ease;
 }
 
-.explore-now-btn:hover{
+.explore-now-btn:hover {
   background-color: #bc3115;
 }
 
 /* Trending Your Packages - Finish */
+
+.about-trend-section-container {
+  display: flex;
+  justify-content: center;
+  padding-top: 50px;
+  position: relative;
+  align-items: center;
+  gap: 150px;
+}
+
+#tourNameText {
+  font-family: "Poppins", sans-serif;
+  font-size: 22px;
+  color: #181e4b;
+}
+
+.about-trend-page-description {
+  text-align: start;
+}
+
+.shell-image {
+  position: absolute;
+  right: -20px;
+  top: 30px;
+}
+
+.number-screens {
+  padding-top: 80px;
+  display: flex;
+  gap: 50px;
+}
+
+.vacation-screen{
+  text-align: center;
+}
+.honeymoon-screen{
+  text-align: center;
+}
+.musical-screen{
+  text-align: center;
+}
+
+.our-popular-text {
+  font-size: 50px;
+  color: #181E4B;
+  font-family: "Volkhov", sans-serif;
+}
+
+.trend-text {
+  font-size: 18px;
+  color: #df6951;
+  font-family: "Poppins", sans-serif;
+}
+
+.trend-paragraph {
+  font-size: 16px;
+  font-family: "Poppins", sans-serif;
+  padding-top: 20px;
+}
+
+@media only screen and (max-width: 1600px){
+  .shell-image{
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 1334px) {
+  .about-trend-section-container{
+    gap: 0;
+  }
+}
+
+@media only screen and (max-width: 1180px) {
+  .about-trend-section-container{
+    display: flex;
+    flex-direction: column;
+    padding-top: 10px;
+  }
+  .trend-img{
+    width: 310px;
+  }
+  .about-trend-page-description {
+    text-align: center;
+    padding-top: 20px;
+  }
+}
+@media only screen and (max-width: 624px){
+  .number-screens{
+    display: flex;
+    flex-direction: column;
+  }
+}
+
