--- a/styles/index.css
+++ b/styles/index.css
@@ -8,13 +8,36 @@
 }
 
 /* General Settings Finish */
+/*Partners-Section styles*/
+.HOMPAGE-PARTNER-SECTİON{
+  width: 100%;
+  height: 200px;
+}
+.PARTNER-SECTİON-LOGO{
+display: flex;
+max-width: 1920px;
+height: 200px;
+padding: 80px 0px;
+align-items: flex-start;
+gap: 180px;
+margin: auto;
+background: #F7F7F7;
+justify-content: center;
+}
+.logo-img{
+  width: 154px;
+  height: 50px;
+  justify-content: space-between;
+  
+ 
+}
 /* Best-Services styles*/
 .best-services{
   margin: 100px 20px;
 }
 .Homepage-best-services-1 {
   line-height: 28px;
-  color: #df6951;
+  color:#DF6951 ;
   font-family: "poppins", sans-serif;
   text-align: center;
   font-size: 18px;
