--- a/styles/index.css
+++ b/styles/index.css
@@ -267,25 +267,31 @@ font-weight: 700;
 display: flex;
 flex-direction: column;
 color: #FFFFFF;
-position: relative;
 max-width: 1250px;
 flex: 1;
 }
 .liberty-statue h1{
-  font-size: clamp(25px , 4vw , 40px);
-  line-height: clamp(40px , 4vw , 60px);
-}
-.line-liberty{
- max-width: 565px;
-text-align: end;
+font-size: clamp(25px , 4vw , 40px);
 line-height: clamp(40px , 4vw , 60px);
 }
-@media only screen and (max-width: 585px){
+.line-and-text{
+width: fit-content;
+position: relative;
+}
+.line-liberty{
+position: absolute;
+bottom: -36px;
+right: -30%;
+width: clamp(225px , 24vw , 310px);
+}
+.liberty-line{
+  width: 100%;
+}
+@media only screen and (max-width;350px) {
   .line-liberty{
-   
+  right: -50px;
   }
 }
-
 /*  homepage-liberty-banner- Finish */
 
 /* Promotion Explore Packages - Start */
