--- a/styles/index.css
+++ b/styles/index.css
@@ -9,9 +9,17 @@
 }
 /* General Settings Finish */
 /*Partners-Section styles*/
-.hompage-partner-section{
+.partner-section-animation{
   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
   background-color: #F5F5F5;
+}
+.hompage-partner-section{
+  max-width: 1350px;
+  
   white-space: nowrap;
   position: relative;
   display: flex;
@@ -20,44 +28,29 @@
 .partner-section-logo{
 display: flex;
 max-width: 1920px;
-height: 200px;
 align-items: center;
 margin: auto;
-justify-content: space-around;
 animation: 20s slide infinite linear;
-margin: 0px 60px;
-gap: 7pc;
-
 }
 .hompage-partner-section:hover .partner-section-logo{
   animation-play-state: paused;
 }
 .logo-img{
   height: 50px;
+  padding: 0 40px;
 }
-.hompage-partner-section::before{
+.hompage-partner-section::before,
+.hompage-partner-section::after{
   position: absolute;
   top: 0;
   left: 0;
   width: 250px;
   height: 100%;
-  border-radius: 30px;
   content: "" ;
   background: linear-gradient(to left, rgba(255,255,255,0),white) ;
   z-index: 1;
-  opacity: 0.5;
 }
-.hompage-partner-section::after{
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 250px;
-  height: 100%;
-  border-radius: 30px;
-  content: "";
-  z-index: 2;
-  background: linear-gradient(to right, rgba(255,255,255,0),white);
-}
+
 @keyframes slide {
   from{
     transform: translateX(0);
